tests/baselines/reference/generatorTypeCheck31.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck31.ts(2,11): error TS2322: Type 'IterableIterator<(x: any) => any>' is not assignable to type '() => Iterable<(x: string) => number>'.
  Signature '(): Iterable<(x: string) => number>' has no corresponding signature in 'IterableIterator<(x: any) => any>'


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck31.ts (1 errors) ====
    function* g2(): Iterator<() => Iterable<(x: string) => number>> {
        yield function* () {
              ~~~~~~~~~~~~~~
            yield x => x.length;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        } ()
    ~~~~~~~~
!!! error TS2322: Type 'IterableIterator<(x: any) => any>' is not assignable to type '() => Iterable<(x: string) => number>'.
!!! error TS2322:   Signature '(): Iterable<(x: string) => number>' has no corresponding signature in 'IterableIterator<(x: any) => any>'
    }